Bug 361494 - Cannot restore window size
Summary: Cannot restore window size
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-07 13:28 UTC by Elvis Angelaccio
Modified: 2016-06-28 12:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-04-07 13:28:18 UTC
Since: v2.0.2

This is caused by the workaround for bug #351746

Reproducible: Always
Comment 1 Elvis Angelaccio 2016-06-28 12:10:22 UTC
Git commit c081e3c31e3060a1af66703ad6884a252be34924 by Elvis Angelaccio.
Committed on 28/06/2016 at 12:09.
Pushed by elvisangelaccio into branch '2.1'.

Fix restoring of window size

We resize() the main window only when no window size was saved in the config
file.
Related: bug 351746
FIXED-IN: 2.1.1

M  +18   -2    src/mainwindow.cpp
M  +5    -0    src/mainwindow.h

http://commits.kde.org/kronometer/c081e3c31e3060a1af66703ad6884a252be34924