Fix restoring of window size

We resize() the main window only when no window size was saved in the config
file.

BUG: 361494
FIXED-IN: 2.1.1

CCBUG: 351746